--- a/Feature Scaling/Feature Scaling.ipynb
+++ b/Feature Scaling/Feature Scaling.ipynb
@@ -293,8 +293,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b3d649eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ellipsis"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "925e9aad",
    "metadata": {},
    "outputs": [],
    "source": []
