--- a/Feature Scaling/Feature Scaling.ipynb
+++ b/Feature Scaling/Feature Scaling.ipynb
@@ -5,7 +5,10 @@
    "id": "8893b4f3",
    "metadata": {},
    "source": [
-    "## Feature Scaling\n",
+    "<div class=\"alert alert-block alert-success\">\n",
+    "    <h1 align=\"center\">Feature Scaling</h1>\n",
+    "</div>\n",
+    "\n",
     "Feature Scaling is a technique of bringing down the values of all the independent features of our dataset on the same scale. Feature selection helps to do calculations in algorithms very quickly. It is the important stage of data preprocessing.\n",
     "<figure>\n",
     "    <center> <img src=\"https://miro.medium.com/max/1200/1*yR54MSI1jjnf2QeGtt57PA.png\"  style=\"width:600px;height:400px;\" ></center>\n",
@@ -38,9 +41,7 @@
     "<a name=\"top_1\"></a>\n",
     "# 1. Project detail\n",
     "---------------\n",
-    "In this prject we want to learto scale features of our dataset to obtain a better result.\n",
-    "\n",
-    "In this dataset, we want to get suitable values for power consumption based on reported features.\n",
+    "In this prject we want to learn how to scale features of our dataset to obtain a better result.Our dataset is to regarding power consumption. Actually the goal is find the best correlation between power consumption and other features to predict suitable values for power consumption based on  new reported features.\n",
     "\n",
     "Let's get started"
    ]
@@ -57,8 +58,10 @@
     "\n",
     "|General <img width=70/> <br />  Notation  <img width=70/> | Description<img width=350/>| Python (if applicable) |\n",
     "|: ------------|: ------------------------------------------------------------||\n",
-    "|  $\\mathbf{x}$ | Training Example feature values (in this lab - 97 items))  | `x_train` |   \n",
-    "|  $\\mathbf{y}$  | Training Example  targets (in this lab lab - 97 items).  | `y_train` \n",
+    "|  $\\mathbf{x-train}$ | Training Example feature values (in this lab - 41932 items))  | `x_train` |   \n",
+    "|  $\\mathbf{y-train}$  | Training Example  targets (in this lab lab - 41932 items).  | `y_train` \n",
+    "|  $\\mathbf{x-test}$ | Test Example feature values (in this lab - 10484 items))  | `x_train` |   \n",
+    "|  $\\mathbf{y-test}$  | Test Example  targets (in this lab lab - 10484 items).  | `y_train` \n",
     "| m | Number of training examples | `m`|\n",
     "| n | Number of features          | `n`|\n"
    ]
@@ -240,6 +243,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "6d98b513",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of rows:52416\n",
+      "Number of columns:6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Number of rows:{data.shape[0]}\\nNumber of columns:{data.shape[1]}')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "e2dce773",
    "metadata": {},
@@ -250,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b3d649eb",
    "metadata": {},
    "outputs": [
@@ -281,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "925e9aad",
    "metadata": {},
    "outputs": [
@@ -297,7 +319,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "580eb227",
    "metadata": {},
    "outputs": [
@@ -324,7 +346,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7b798989",
    "metadata": {},
    "outputs": [
@@ -401,31 +423,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "58060f25",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 5.34405683e+02, -5.57553242e+01, -1.38529003e+02,\n",
-       "        -1.61333391e+00, -1.10103823e-01]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "List of w for the fit line:\n",
+      "\n",
+      "[ 5.34405683e+02 -5.57553242e+01 -1.38529003e+02 -1.61333391e+00\n",
+      " -1.10103823e-01]\n"
+     ]
     }
    ],
    "source": [
+    "# Our model to train is Linear Regression\n",
     "Regressor = LinearRegression()\n",
     "Regression = Regressor.fit(x_train,y_train)\n",
-    "Regression.coef_"
+    "print(f'List of w for the fit line:\\n\\n{Regression.coef_[0]}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "e3b27b80",
    "metadata": {},
    "outputs": [
@@ -441,7 +463,7 @@
        "       [35598.2234164 ]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "680cb90b",
    "metadata": {},
    "outputs": [
@@ -470,7 +492,7 @@
        "       [37641.37625]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "65375d42",
    "metadata": {},
    "outputs": [
@@ -489,14 +511,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RSE =  39842406.218287066\n"
+      "RSE1 =  39842406.218287066\n"
      ]
     }
    ],
    "source": [
-    "# See scores obtained from this model without feature scaling\n",
-    "RSE = mean_squared_error(y_test, y_predict)\n",
-    "print('RSE = ',RSE)"
+    "# See RSE score obtained from this model without feature scaling\n",
+    "RSE1 = mean_squared_error(y_test, y_predict)\n",
+    "print('RSE1 = ',RSE1)"
    ]
   },
   {
@@ -510,19 +532,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "fda3047c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First type of scaling: Normalization\n",
+    "# Here I just use Normalization, If you like to use other methods, it's ok.Don not worry\n",
     "Scaler = MinMaxScaler()\n",
     "data= pd.DataFrame(Scaler.fit_transform(data))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "1e3a8d9a",
    "metadata": {
     "scrolled": true
@@ -603,98 +625,36 @@
        "      <td>0.000079</td>\n",
        "      <td>0.350834</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52411</th>\n",
-       "      <td>0.102358</td>\n",
-       "      <td>0.731608</td>\n",
-       "      <td>0.004663</td>\n",
-       "      <td>0.000031</td>\n",
-       "      <td>0.000091</td>\n",
-       "      <td>0.450675</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52412</th>\n",
-       "      <td>0.100645</td>\n",
-       "      <td>0.734004</td>\n",
-       "      <td>0.004974</td>\n",
-       "      <td>0.000040</td>\n",
-       "      <td>0.000088</td>\n",
-       "      <td>0.431618</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52413</th>\n",
-       "      <td>0.099366</td>\n",
-       "      <td>0.736401</td>\n",
-       "      <td>0.005596</td>\n",
-       "      <td>0.000069</td>\n",
-       "      <td>0.000067</td>\n",
-       "      <td>0.409703</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52414</th>\n",
-       "      <td>0.095504</td>\n",
-       "      <td>0.738797</td>\n",
-       "      <td>0.004663</td>\n",
-       "      <td>0.000053</td>\n",
-       "      <td>0.000083</td>\n",
-       "      <td>0.393187</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>52415</th>\n",
-       "      <td>0.090662</td>\n",
-       "      <td>0.751977</td>\n",
-       "      <td>0.004819</td>\n",
-       "      <td>0.000050</td>\n",
-       "      <td>0.000107</td>\n",
-       "      <td>0.377306</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>52416 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "              0         1         2         3         4         5\n",
-       "0      0.090091  0.748382  0.005130  0.000040  0.000115  0.526251\n",
-       "1      0.086146  0.756770  0.005130  0.000057  0.000079  0.415545\n",
-       "2      0.083399  0.756770  0.004663  0.000050  0.000095  0.397623\n",
-       "3      0.078176  0.762761  0.005130  0.000075  0.000091  0.374149\n",
-       "4      0.072736  0.771148  0.004819  0.000038  0.000079  0.350834\n",
-       "...         ...       ...       ...       ...       ...       ...\n",
-       "52411  0.102358  0.731608  0.004663  0.000031  0.000091  0.450675\n",
-       "52412  0.100645  0.734004  0.004974  0.000040  0.000088  0.431618\n",
-       "52413  0.099366  0.736401  0.005596  0.000069  0.000067  0.409703\n",
-       "52414  0.095504  0.738797  0.004663  0.000053  0.000083  0.393187\n",
-       "52415  0.090662  0.751977  0.004819  0.000050  0.000107  0.377306\n",
-       "\n",
-       "[52416 rows x 6 columns]"
+       "          0         1         2         3         4         5\n",
+       "0  0.090091  0.748382  0.005130  0.000040  0.000115  0.526251\n",
+       "1  0.086146  0.756770  0.005130  0.000057  0.000079  0.415545\n",
+       "2  0.083399  0.756770  0.004663  0.000050  0.000095  0.397623\n",
+       "3  0.078176  0.762761  0.005130  0.000075  0.000091  0.374149\n",
+       "4  0.072736  0.771148  0.004819  0.000038  0.000079  0.350834"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data"
+    "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "8fda9ca6",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Again we must make our model and train it to see the effect of Normalization of the result\n",
     "# Set x and y \n",
     "x = np.array(data.iloc[:,:-1])\n",
     "y = np.array(data.iloc[:,-1]).reshape(-1,1)\n",
@@ -711,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "78f61540",
    "metadata": {
     "scrolled": true
@@ -729,7 +689,7 @@
        "       [0.56651695]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -740,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "ca6988ad",
    "metadata": {
     "scrolled": true
@@ -758,7 +718,7 @@
        "       [0.61985086]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -769,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "483ff4fd",
    "metadata": {},
    "outputs": [
@@ -777,28 +737,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RSE =  0.02714880727370638\n"
+      "RSE2 =  0.02714880727370638\n",
+      "As you see the amount of this RSE is highly lower than the previous RSE which was:39842406.218287066\n"
      ]
     }
    ],
    "source": [
+    "# See the RSE score obtained from this model with feature scaling\n",
+    "RSE2 = mean_squared_error(y_test, y_predict)\n",
+    "print('RSE2 = ',RSE2)\n",
     "\n",
-    "# See scores obtained from this model without feature scaling\n",
-    "RSE = mean_squared_error(y_test, y_predict)\n",
-    "print('RSE = ',RSE)\n"
+    "print(f'As you see the amount of this RSE is highly lower than the previous RSE which was:{RSE1}')\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9dacb345",
+   "id": "feb42c9b",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# Second type of scaling: Normalization\n",
-    "Scaler = MinMaxScaler()\n",
-    "data= pd.DataFrame(Scaler.fit_transform(data))"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -817,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.9.9"
   }
  },
  "nbformat": 4,
