--- a/Feature Scaling/Feature Scaling.ipynb
+++ b/Feature Scaling/Feature Scaling.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-success\">\n",
+    "    <h1 align=\"center\">Mohammad Amirifard</h1>\n",
     "    <h1 align=\"center\">Feature Scaling</h1>\n",
     "</div>\n",
     "\n",
